force-app/main/default/objects/ServiceAppointment/fields/Asset_image__c.field-meta.xml
<CustomField>
    <fullName>Asset_image__c</fullName>
    <description>Contains the Id of the image that should be linked to the Asset to be the cover image for the installation.</description>
    <label>Asset image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>