force-app/main/default/objects/ServiceAppointment/fields/Assigned_Service_Resource_name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Service_Resource_name__c</fullName>
    <description>Helper field for the flow &quot;Create Internal work for Installer(s)&quot; to show the name of the resource in the data table.</description>
    <formula>LUM_Assigned_Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Service Resource name</label>
    <type>Text</type>
</CustomField>