force-app/main/default/objects/ServiceAppointment/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <description>This date is received from ERP but change on Configuration Product will make the update to Service Appointment.</description>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>