force-app/main/default/objects/ServiceAppointment/fields/Delivery_Batch__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allow to track all work related to Delivery Batch on Delivery Batch.</description>
    <label>Delivery Batch</label>
    <referenceTo>Delivery_Batch__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>