force-app/main/default/objects/ServiceAppointment/fields/Installers_comments__c.field-meta.xml
<CustomField>
    <fullName>Installers_comments__c</fullName>
    <description>Comments from the Installer after the installation is complete.</description>
    <label>Installers comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>