force-app/main/default/objects/ServiceAppointment/fields/Is_Soft_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Is_Soft_Reserved__c</fullName>
    <formula>ISPICKVAL(Status, &quot;None&quot;)  &amp;&amp;   
NOT(ISBLANK( ArrivalWindowStartTime ))  &amp;&amp;   
NOT(ISBLANK( ArrivalWindowEndTime ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Soft Reserved</label>
    <type>Checkbox</type>
</CustomField>