force-app/main/default/objects/ServiceAppointment/fields/LUM_Assigned_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>LUM_Assigned_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Assigned Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>