force-app/main/default/objects/ServiceAppointment/fields/LUM_Capacity_Reservation_Shift__c.field-meta.xml
<CustomField>
    <fullName>LUM_Capacity_Reservation_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that signifies that a Service Appointment should be scheduled into the Capacity Reservation Shift.</description>
    <label>Capacity Reservation Shift</label>
    <type>Checkbox</type>
</CustomField>