force-app/main/default/objects/ServiceAppointment/fields/LUM_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>LUM_Installation_Date__c</fullName>
    <formula>DATEVALUE(SchedEndTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>