force-app/main/default/objects/ServiceAppointment/fields/LUM_To_be_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>LUM_To_be_Dispatched__c</fullName>
    <description>Checked when an Appointment should be Dispatched</description>
    <formula>SchedStartTime &lt;  DateTimeValue(Datevalue(NOW()  + ServiceTerritory.LUM_Dispatching_Offset__c + 1)) &amp;&amp;   ISPICKVAL(Status, &apos;Scheduled&apos;) &amp;&amp; SchedStartTime &gt; Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To be Dispatched</label>
    <type>Checkbox</type>
</CustomField>