force-app/main/default/objects/ServiceAppointment/fields/LUM_Travel_Start__c.field-meta.xml
<CustomField>
    <fullName>LUM_Travel_Start__c</fullName>
    <description>Captures the start of travel a the time the Technician sets the status to Travel.</description>
    <label>Travel Start</label>
    <type>DateTime</type>
</CustomField>