force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>LUM_Parent_Work_Order__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>STREET</columns>
    <columns>EstDuration</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>Subject</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualDuration</columns>
    <columns>LatestEndTime</columns>
    <columns>Delivery_Batch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
</ListView>