force-app/main/default/objects/ServiceAppointment/listViews/Fallback_Queue_ServiceAppointment.listView-meta.xml
<ListView>
    <fullName>Fallback_Queue_ServiceAppointment</fullName>
    <filterScope>Queue</filterScope>
    <label>Fallback Queue</label>
    <queue>Fallback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>