force-app/main/default/objects/ServiceAppointment/listViews/FSL_Mobile_Service_Appointments_Prime.listView-meta.xml
<ListView>
    <fullName>FSL_Mobile_Service_Appointments_Prime</fullName>
    <columns>STREET</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>FSL Mobile Service Appointments Prime</label>
</ListView>