force-app/main/default/objects/ServiceAppointment/listViews/Hidden_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>Hidden_Service_Appointments</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LUM_Parent_Work_Order__c</columns>
    <columns>Status</columns>
    <columns>EstDuration</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Asset__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>STREET</columns>
    <columns>Subject</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Hidden</value>
    </filters>
    <label>Hidden Service Appointments</label>
</ListView>