force-app/main/default/objects/ServiceAppointment/listViews/Service_Appointments_in_None_status.listView-meta.xml
<ListView>
    <fullName>Service_Appointments_in_None_status</fullName>
    <columns>Name</columns>
    <columns>ServiceTerritory</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>FSL__IsMultiDay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <label>Service Appointments in None status</label>
</ListView>