force-app/main/default/objects/ServiceAppointment/listViews/Service_Appointments_Mobile.listView-meta.xml
<ListView>
    <fullName>Service_Appointments_Mobile</fullName>
    <columns>STREET</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualEndTime</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Service Appointments Mobile</label>
</ListView>