force-app/main/default/objects/ServiceAppointment/listViews/Soft_Reserved_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>Soft_Reserved_Service_Appointments</fullName>
    <columns>Name</columns>
    <columns>ServiceTerritory</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>STREET</columns>
    <columns>Account</columns>
    <columns>EstDuration</columns>
    <columns>FSL__IsMultiDay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Soft_Reserved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Soft Reserved Service Appointments</label>
</ListView>